@@ -314,6 +314,22 @@ data is semicolon-separated list of the following options:
   sentence on a line, and is only tokenized (respecting sentence breaks)
 - ranges: for every token, range in the original document is stored in format
   described below.
+- joint_with_parsing: an experimental mode performing sentence segmentation
+  jointly using the tokenizer and the parser (see Milan Straka and Jana
+  Straková: Tokenizing, POS Tagging, Lemmatizing and Parsing UD 2.0 with UDPipe
+  (http://ufal.mff.cuni.cz/~straka/papers/2017-conll_udpipe.pdf) paper for
+  details). The following options are utilized:
+  - joint_max_sentence_len (default 20): maximum sentence length
+  - joint_change_boundary_logprob (default -0.5): logprob of using sentence
+    boundary not generated by the tokenizer
+  - joint_sentence_logprob (default -0.5): additional logprob of every sentence
+  The logprob of a sentence is computed using logprob of its best dependency
+  parsing tree, together with joint_sentence_logprob and also
+  joint_change_boundary_logprob for every sentence boundary not returned by the
+  tokenizer (i.e., either 0, 1 or 2 times). The joint sentence segmentation
+  chooses such a segmentation, where every sentence has length at most
+  joint_max_sentence_len and the sum of logprobs of all sentences is as large as
+  possible.
 
 
 Preserving Original Spaces
