@@ -712,6 +712,24 @@ tokenizer might be specified using <code>--tokenizer=data</code> option (which i
 <li><code>ranges</code>: for every token, range in the original document is stored in
   format described below.
 </li>
+<li><code>joint_with_parsing</code>: an experimental mode performing sentence segmentation
+  jointly using the tokenizer and the parser (see <i><a href="http://ufal.mff.cuni.cz/~straka/papers/2017-conll_udpipe.pdf">Milan Straka and Jana Straková: Tokenizing, POS Tagging, Lemmatizing and Parsing UD 2.0 with UDPipe</a></i> paper for details).
+  The following options are utilized:
+  <ul>
+  <li><code>joint_max_sentence_len</code> (default 20): maximum sentence length
+  </li>
+  <li><code>joint_change_boundary_logprob</code> (default -0.5): logprob of using sentence boundary not generated by the tokenizer
+  </li>
+  <li><code>joint_sentence_logprob</code> (default -0.5): additional logprob of every sentence
+  </li>
+  </ul>
+  The logprob of a sentence is computed using logprob of its best dependency parsing tree,
+  together with <code>joint_sentence_logprob</code> and also <code>joint_change_boundary_logprob</code>
+  for every sentence boundary not returned by the tokenizer (i.e., either 0, 1 or 2 times).
+  The joint sentence segmentation chooses such a segmentation, where every
+  sentence has length at most <code>joint_max_sentence_len</code> and the sum of logprobs of all sentences
+  is as large as possible.
+</li>
 </ul>
 
 <a id="run_udpipe_tokenizer_spaces" name="run_udpipe_tokenizer_spaces"></a>
