@@ -61,6 +61,36 @@ class model_morphodita_parsito : public model {
 
   bool parse(sentence& s, const string& options, string& error, double* cost) const;
 
+  class joint_with_parsing_tokenizer : public input_format {
+   public:
+    joint_with_parsing_tokenizer(input_format* tokenizer, const model_morphodita_parsito& model,
+                                 int max_sentence_len, double change_boundary_logprob, double sentence_logprob)
+        : tokenizer(tokenizer), model(model), max_sentence_len(max_sentence_len),
+          change_boundary_logprob(change_boundary_logprob), sentence_logprob(sentence_logprob) {}
+
+    virtual bool read_block(istream& is, string& block) const override;
+    virtual void reset_document(string_piece id) override;
+    virtual void set_text(string_piece text, bool make_copy = false) override;
+    virtual bool next_sentence(sentence& s, string& error) override;
+
+   private:
+    bool parse_paragraph(vector<sentence>& paragraph, string& error);
+
+    unique_ptr<input_format> tokenizer;
+    const model_morphodita_parsito& model;
+    int max_sentence_len;
+    double change_boundary_logprob;
+    double sentence_logprob;
+
+    string_piece text;
+    string text_copy;
+    bool new_document = true;
+    string document_id;
+    unsigned sentence_id = 1;
+    vector<sentence> sentences;
+    size_t sentences_index = 0;
+  };
+
   void fill_word_analysis(const morphodita::tagged_lemma& analysis, bool upostag, int lemma, bool xpostag, bool feats, word& word) const;
   const string& normalize_form(string_piece form, string& output) const;
   const string& normalize_lemma(string_piece lemma, string& output) const;
